--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Beers & Bikes</h1>
+<p>The Best Beers & Bikes</p>
+<%= render "/shared/caroussel" %>
+<%= render "/shared/search" %>
+
