--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Bikes#index</h1>
 <p>Find me in app/views/bikes/index.html.erb</p>
+<div class="row">
+  <% @bikes.each do |bike| %>
+    <div class="bike card">
+      <%= bike.brand%>
+      <%= bike.model%>
+      <%= bike.price%>
+      <%= bike.speed%>
+    </div>
+  <% end %>
+</div>
