--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Bikes#show</h1>
 <p>Find me in app/views/bikes/show.html.erb</p>
+<%= @bike.brand%>
+<%= @bike.model%>
+<%= @bike.price%>
+<%= @bike.speed%>
