--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%= render "/shared/navbar" %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= render 'shared/flashes' %>
+
+
     <%= yield %>
     <%= render "/shared/footer" %>
     <%= javascript_include_tag 'application' %>
