--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,7 +1,6 @@
 <h1 class="text-center">Your Bookings</h1>
 <ul>
-  <% @bookings.each do |booking| %>
-  <li>Start Date:<%= booking.start_date %></li>
-  <li>End Date: <%= booking.end_date %></li>
-  <% end %>
-</ul>
+  <li>Start Date:<%= @booking.start_date %></li>
+  <li>End Date: <%= @booking.end_date %></li>
+<!--   # vai dar conflito mas precisa de ficar falar com o TIAGO
+ --></ul>
