made the index and show erb for bikes

--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,6 +1,10 @@
 <h1>Bikes#show</h1>
 <p>Find me in app/views/bikes/show.html.erb</p>
-<%= @bike.brand%>
-<%= @bike.model%>
-<%= @bike.price%>
-<%= @bike.speed%>
+<div>
+  <ul>
+  <li>Brand: <%= @bike.brand%></li>
+  <li>Model: <%= @bike.model%></li>
+  <li>Price: <%= @bike.price%></li>
+  <li>Speed: <%= @bike.speed%></li>
+  </ul>
+</div>
