--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<h1>New Booking</h1>
+<%= simple_form_for [@bike, @booking] do |t| %>
+<%= t.input :start_date, input_html: { class: "datepicker"} %>
+<%= t.input :end_date, input_html: { class: "datepicker"} %>
+<%= t.submit "Go", class: "btn btn-primary" %>
+<% end %>
+
+
