--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Bookings#edit</h1>
-<p>Find me in app/views/bookings/edit.html.erb</p>
+<h1>Edit your Booking</h1>
+<h2>Vehicle: <%= @booking.bike.brand %> <%= @booking.bike.model %></h2>
+<%= simple_form_for [@booking.bike, @booking] do |t| %>
+<%= t.input :start_date, input_html: { class: "datepicker"} %>
+<%= t.input :end_date, input_html: { class: "datepicker"} %>
+<%= t.submit "Confirm changes", class: "btn btn-primary" %>
+<% end %>
