--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,8 +6,11 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
-  <div class="footer-copyright">
-    <p>If 🏍 Don't drink and drive 🍺 else 🚑 ⚰️ 😢  Air Beers & Bikes®️</p>
+   <!-- <div>
+    <p>If 🏍 Don't drink and drive 🍺 else 🚑 ⚰️ 😢 </p>
+    <div> -->
+    <p>Air Beers & Bikes®️</p>
+    </div>
   </div>
 </div>
 
