--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="cover">
-    <h1>Discover what's out there.</h1>
+    <h1>Discover Portugal's best Beers and Bikes.</h1>
 
   <%= form_tag bikes_path, method: :get, class: 'flex-form' do %>
     <i class="fas fa-motorcycle"></i>
@@ -11,5 +11,6 @@
     %>
     <%= submit_tag "Search" %>
   <% end %>
+
 </div>
 </div>
