--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -2,13 +2,17 @@
 <p>Find me in app/views/bikes/index.html.erb</p>
 <div class="row">
   <h1>Bikes</h1>
-  <ul>
-  <% @bikes.each do |bike| %>
-    <div class="flex-container">
-      <div class="row">
-        <%= link_to "#{bike.brand} #{bike.model}", bike_path(bike) %>
-      </div>
+    <div class="cards-list">
+        <% @bikes.each do |bike| %>
+        <div class="card" style="width: 18rem;">
+        <%= cl_image_tag bike.photo, height: 300px %>
+          <div class="card-body">
+            <%= link_to "#{bike.brand} #{bike.model}", bike_path(bike) %>
+          </div>
+        </div>
+        <% end %>
     </div>
-  <% end %>
-</ul>
 </div>
+
+
+<img class="card-img-top" data-src="holder.js/100px180/?text=Image cap" alt="Image cap [100%x180]" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1707ce97beb%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1707ce97beb%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2298.91666793823242%22%20y%3D%2295.7%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
