--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <%= render 'shared/flashes' %>
 
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render "/shared/footer" %>
     <%= javascript_include_tag 'application' %>
 
