--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,14 +1,16 @@
-<h1>Bikes#index</h1>
-<p>Find me in app/views/bikes/index.html.erb</p>
-<div class="row">
-  <h1>Bikes</h1>
-  <ul>
-  <% @bikes.each do |bike| %>
-    <div class="flex-container">
-      <div class="row">
-        <%= link_to "#{bike.brand} #{bike.model}", bike_path(bike) %>
-      </div>
-    </div>
-  <% end %>
-</ul>
+<div class="banner-light">
+  <h1>Bikes#index</h1>
+  <p>Find me in app/views/bikes/index.html.erb</p>
+  <div class="row">
+    <h1>Bikes</h1>
+    <ul>
+      <% @bikes.each do |bike| %>
+        <div class="flex-container">
+          <div class="row">
+            <%= link_to "#{bike.brand} #{bike.model}", bike_path(bike) %>
+          </div>
+        </div>
+      <% end %>
+    </ul>
+  </div>
 </div>
