--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <h1>Bikes</h1>
-    <div class="cards-list">
+    <div class="cards-list justify-content-center">
         <% @bikes.each do |bike| %>
         <%= link_to bike_path(bike) do %>
         <div class="card" style="width: 18rem;">
