--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,20 @@
 <h1>New Booking</h1>
-<%= simple_form_for [@bike, @booking] do |t| %>
-<%= t.input :start_date, input_html: { class: "datepicker"} %>
-<%= t.input :end_date, input_html: { class: "datepicker"} %>
-<%= t.submit "Go", class: "btn btn-primary" %>
-<% end %>
+<%#= simple_form_for [@bike, @booking] do |t| %>
+<%#= t.input :start_date, input_html: { class: "datepicker"} %>
+<%#= t.input :end_date, input_html: { class: "datepicker"} %>
+<%#= t.submit "Go", class: "btn btn-primary" %>
+<%# end %>
+<div class="datepicker">
+  <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://images.unsplash.com/photo-1558981403-c5f9899a28bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Honda</h5>
 
-
+  </div>
+</div>
+<%= simple_form_for :search, method: :get do |t| %>
+      <%= t.input :starts_at, label: false, input_html: { class: "datepicker"}, placeholder: "start date" %>
+      <%= t.input :ends_at, label: false, input_html: { class: "datepicker"}, placeholder: "end date" %>
+      <%= t.submit "Book", class: "btn btn-primary" %>
+      <% end %>
+</div>
