--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,18 +1,22 @@
-
 <div class="row">
-  <h1>Bikes</h1>
     <div class="cards-list justify-content-center">
-        <% @bikes.each do |bike| %>
-        <%= link_to bike_path(bike) do %>
-        <div class="card" style="width: 18rem;">
-        <%= cl_image_tag bike.photo.key, class: "card-img-top"  %>
-          <div class="card-body">
-            <h6><%= "#{bike.brand} #{bike.model}" %></h6>
-          </div>
+      <% @bikes.each do |bike| %>
+      <%= link_to bike_path(bike) do %>
+      <div class="card" style="width: 18rem;">
+      <%= cl_image_tag bike.photo.key, class: "card-img-top"  %>
+        <div class="card-body">
+          <h6><%= "#{bike.brand} #{bike.model}" %></h6>
         </div>
-        <% end %>
-        <% end %>
+      </div>
+      <% end %>
+      <% end %>
     </div>
-
 </div>
 
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
