--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -1,5 +1,5 @@
 .cards {
-  padding-bottom: 300px;
+  padding-bottom: 50px;
 }
 
 .card-category{
@@ -49,5 +49,10 @@
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+body{
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
