--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,55 +1,60 @@
-// Specific CSS for your home-page
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+// // Specific CSS for your home-page
+// // @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
+// // *, *:before, *:after {
+// //   -webkit-box-sizing: inherit;
+// //   -moz-box-sizing: inherit;
+// //   box-sizing: inherit;
+// // }
 
-::-webkit-input-placeholder {
-  color: #56585b;
-}
+// // ::-webkit-input-placeholder {
+// //   color: #56585b;
+// // }
 
-::-moz-placeholder {
-  color: #56585b;
-}
+// // ::-moz-placeholder {
+// //   color: #56585b;
+// // }
 
-:-moz-placeholder {
-  color: #56585b;
-}
+// // :-moz-placeholder {
+// //   color: #56585b;
+// // }
 
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// // html {
+// //   -webkit-box-sizing: border-box;
+// //   -moz-box-sizing: border-box;
+// //   box-sizing: border-box;
+// // }
 
-body {
-  font-family: 'Lato', sans-serif;
+// // body {
+// //   font-family: 'Lato', sans-serif;
 
-}
+// }
 
 .banner {
-  margin: 0;
-  background: url('https://images.unsplash.com/photo-1558981806-ec527fa84c39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') ;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
+  // margin: 0;
+   background: url('https://images.unsplash.com/photo-1558981806-ec527fa84c39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') ;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // background-size: cover;
+  // color: #0a0a0b;
+  // overflow: hidden;
   background-size: cover;
-  color: #0a0a0b;
-  overflow: hidden;
+  background-position: center;
+  padding: 150px 0;
+  border-radius: 0;
+  margin-bottom: 20px;
 }
 
-.banner-light {
-  margin: 0;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1558981806-ec527fa84c39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  color: #0a0a0b;
-  overflow: hidden;
-  min-height: 80vh;
-}
+// .banner-light {
+//   margin: 0;
+//   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1558981806-ec527fa84c39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   background-size: cover;
+//   color: #0a0a0b;
+//   overflow: hidden;
+//   min-height: 80vh;
+// }
 
 ul, nav{
   list-style: none;
@@ -78,34 +83,34 @@ i {
   font-size: 1.3rem;
 }
 
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
-  padding: 10px 100px 0;
-}
+// header {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   z-index: 10;
+//   width: 100%;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   color: #fff;
+//   padding: 10px 100px 0;
+// }
 
-header nav ul {
-  display: flex;
-}
+// header nav ul {
+//   display: flex;
+// }
 
-header nav li{
-  margin: 0 15px;
-}
+// header nav li{
+//   margin: 0 15px;
+// }
 
-header nav li:first-child{
-  margin-left: 0;
-}
+// header nav li:first-child{
+//   margin-left: 0;
+// }
 
-header nav li:last-child{
-  margin-right: 0;
-}
+// header nav li:last-child{
+//   margin-right: 0;
+// }
 
 a.btn {
   color: #fff;
@@ -122,20 +127,20 @@ a.btn:hover {
   color: #fff;
 }
 
-.cover  {
-  height: 80vh;
-  width: 100%;
-  padding: 20px 50px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
-}
+// .cover  {
+//   height: 80vh;
+//   width: 100%;
+//   padding: 20px 50px;
+//   display: -webkit-box;
+//   display: flex;
+//   -webkit-box-orient: vertical;
+//   -webkit-box-direction: normal;
+//   flex-direction: column;
+//   -webkit-box-pack: center;
+//   justify-content: center;
+//   -webkit-box-align: center;
+//   align-items: center;
+// }
 
 .flex-form input[type="submit"] {
   background: #ef3f5a;
@@ -217,27 +222,27 @@ input[type="search"] {
 
 
 
-@media all and (max-width:360px) {
-  header nav li{
-    margin: 0 10px;
-  }
+// @media all and (max-width:360px) {
+//   header nav li{
+//     margin: 0 10px;
+//   }
 
-  .flex-form {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-  }
+//   .flex-form {
+//     display: -webkit-box;
+//     display: flex;
+//     -webkit-box-orient: vertical;
+//     -webkit-box-direction: normal;
+//     flex-direction: column;
+//   }
 
-  input[type="search"] {
-    flex-basis: 0;
-  }
+//   input[type="search"] {
+//     flex-basis: 0;
+//   }
 
-  label {
-    display: none;
-  }
-}
+//   label {
+//     display: none;
+//   }
+// }
 
 .box {
   display: flex;
