Added search function to map & added map to homepage

--- a/app/views/bikes/_info_window.html.erb
+++ b/app/views/bikes/_info_window.html.erb
@@ -1,2 +1,3 @@
 <h2><strong><%= bike.brand %> <%= bike.model %></strong></h2>
-<p>Pickup location: <%= bike.address %></p>
+<p><%= bike.address %></p>
+
