--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,8 +1,12 @@
 <h1 class="text-center">Your Bookings</h1>
+  <%= if @booking %>
+<h2>You have no bookings</h2>
+<% else %>
 <ul>
   <li>Start Date: <%= @booking.start_date %></li>
   <li>End Date: <%= @booking.end_date %></li>
   <p>Vehicle: <%= @booking.bike.brand %> <%= @booking.bike.model %></p>
 </ul>
+<% end %>
 <%= link_to 'Edit', edit_bike_booking_path(@booking) %>
 <%= link_to 'Back', bike_bookings_path %>
