added some styling

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -51,8 +51,8 @@
   }
 }
 
-body{
-  padding-left: 50px;
-  padding-right: 50px;
-}
+// body{
+//   padding-left: 50px;
+//   padding-right: 50px;
+// }
 
