--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
 <div class="banner">
-
-
   <div class="container">
     <div class="cover">
       <h1>Discover Portugal's best Beers and Bikes.</h1>
@@ -17,4 +15,5 @@
 
 </div>
 <%= render 'shared/body' %>
+<!-- load bikes partial -->
 <%= render 'shared/map' %>
