--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,12 @@
             class: "flex-form",
             placeholder: "Find a bike"%>
           <%= submit_tag "Search" %>
+          <div class="flash flash-danger alert alert-dismissible fade show" role="alert">
+            <span><strong>Disclaimer</strong> If 🏍 Don't drink 🍺 and drive else 🚑  ⚰️  😢</span>
+            <a data-dismiss="alert" aria-label="Close">
+              <i class="fas fa-times"></i>
+            </a>
+          </div>
         <% end %>
     </div>
   </div>
