--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 
   <h4>Bikes <i class="fas fa-motorcycle"></i> </h4>
   <div class="row cards">
-    <% @bikes.each do |bike| %>
+    <% @bikes[1..8].each do |bike| %>
       <div class="col-3">
         <div class="card-category-bikes">
           <%= link_to bike_path(bike) do %>
