--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,7 +32,7 @@
 
 .banner {
   // margin: 0;
-   background: url('https://images.unsplash.com/photo-1558981806-ec527fa84c39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80') ;
+   background: url('https://media.giphy.com/media/3oz8xwsGcaZWWB8KyY/giphy.gif') ;
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
   // background-size: cover;
