--- a/app/views/bikes/_info_window.html.erb
+++ b/app/views/bikes/_info_window.html.erb
@@ -1,3 +1,9 @@
-<h2><strong><%= bike.brand %> <%= bike.model %></strong></h2>
-<p><%= bike.address %></p>
-
+<div class="text-center">
+  <h6><strong><%= bike.brand %> <%= bike.model %></strong></h6>
+  <p><%= bike.address %></p>
+  <% if !bike.rented %>
+    <%= link_to 'Book', bike_path(bike), class: 'btn btn-danger' %>
+  <% else %>
+   <p>Unavailable</p>
+  <% end %>
+</div>
