Navbar-section-should-be-full-width+Navbar-should-be-sticky-on-top

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -17,10 +17,10 @@
   height: 180px;
 }
 
-body{
-  padding-left: 50px;
-  padding-right: 50px;
-}
+// body{
+//   padding-left: 50px;
+//   padding-right: 50px;
+// }
 
 
 .card-category-bikes{
