--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,13 @@
   justify-content: space-between;
   background: transparent;
   width: 100%;
+  transition: 0.5s background-color ease;
+
+}
+
+.navbar-grey {
+  background: #a7a6a5;
+
 }
 
 .navbar-lewagon .navbar-collapse {
