--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-5">
   <div class="row">
     <div class="col-6 offset-3">
       <div class="search-bike-index" class="">
