--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -17,16 +17,10 @@
   height: 180px;
 }
 
-// body{
-//   padding-left: 50px;
-//   padding-right: 50px;
-// }
-
-
 .card-category-bikes{
   background-size: cover;
   background-position: center;
-  background-color: white;
+  // background-color: white;
   margin-bottom: 15px;
   justify-content: center;
   align-items: center;
@@ -49,7 +43,6 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
-  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   height: 180px;
 }
 
@@ -63,15 +56,9 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
-  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   height: 180px;
 }
 
-
-// body{
-//   padding-left: 50px;
-//   padding-right: 50px;
-// }
 
 .card-img-index{
   height: 155px;
