--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row pt-5">
     <div class="col-6 offset-3">
       <div class="search-bike-index" class="">
         <%= form_tag bikes_path, method: :get,class: "form-inline"  do %>
