--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -68,6 +68,18 @@
 
 
 .card-body-bikes h6 {
-text-align: center;
-color: gray;
-  }
+  text-align: center;
+  color: #000;
+  font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
