--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
-  <div class="row pt-5">
+<div class="bikes-banner" id="bikes-index-banner">
+  <div class="row">
     <div class="col-6 offset-3">
       <div class="search-bike-index" class="">
         <%= form_tag bikes_path, method: :get,class: "form-inline"  do %>
           <%= text_field_tag :query,
             params[:query],
-            class: "form-control form-control-lg",
+            class: "form-control form-control-lg search-input",
             placeholder: "Find a bike"
           %>
           <%= submit_tag "Search", class: "btn btn-danger ml-2 btn-lg" %>
@@ -19,7 +19,7 @@
 </div>
 
 
-<div class="container">
+<div class="container pt-5">
   <div class="row cards">
     <% @bikes.each do |bike| %>
       <div class="col-4">
