fixed bikes cards on bikes index

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -60,9 +60,10 @@
 
 
 .card-img-index{
-  height: 155px;
+  height: 185px;
   width: 235px;
-  margin-left: 75px;
+  /* margin-left: 75px; */
+  margin: 0px 50px;
 
 }
 
