--- a/app/views/shared/_body.html.erb
+++ b/app/views/shared/_body.html.erb
@@ -29,9 +29,9 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="bikes-container">
+<div class="container m-2">
     <h4>Bikes <i class="fas fa-motorcycle"></i> </h4>
+  <div class="bikes-container">
     <div class="row cards">
       <% @bikes[1..9].each do |bike| %>
         <div class="col-4">
@@ -49,5 +49,4 @@
       <% end %>
     </div>
   </div>
-
 </div>
