--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login/Sign Up", new_user_session_path, class: "btn btn-primary m-1" %>
+          <%= link_to "Login|Sign Up", new_user_session_path, class: "btn btn-primary m-1" %>
         </li>
       <% end %>
     </ul>
