--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -21,3 +21,68 @@
     min-width: 90%;
   }
 }
+
+// bookings show components
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+}
+
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+}
+
+.booking-index-card {
+  width: 70vw;
+  height: 400px;
+  margin: 30px;
+  display: flex;
+  border: 1px solid black;
+}
+
+.booking-index-card-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.booking-index-card-info-actions {
+  color: black;
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+
+  a {
+    font-size: 20px;
+    color: black;
+  }
+
+  .fas {
+    font-size: 20px;
+    color: black;
+  }
+}
