--- a/app/assets/stylesheets/pages/_bike.scss
+++ b/app/assets/stylesheets/pages/_bike.scss
@@ -1,5 +1,16 @@
-.bike-show-container {
-  display: flex;
-  padding-top: 50px;
-  max-width: 70%;
+.bike-show {
+  margin-bottom: 180px;
+  margin-top: 150px;
 }
+.img-hover-zoom {
+  overflow: hidden;
+}
+
+.img-hover-zoom {
+  transition: transform .5s ease;
+}
+
+.img-hover-zoom:hover {
+  transform: scale(1.2);
+}
+
