--- a/app/assets/stylesheets/pages/_bike.scss
+++ b/app/assets/stylesheets/pages/_bike.scss
@@ -2,6 +2,7 @@
   margin-bottom: 180px;
   margin-top: 150px;
 }
+
 .img-hover-zoom {
   overflow: hidden;
 }
@@ -11,6 +12,16 @@
 }
 
 .img-hover-zoom:hover {
+  transform: scale(1.2);
+}
+
+
+
+.card-category-bikes {
+  transition: transform .5s ease;
+}
+
+.card-category-bikes:hover {
   transform: scale(1.2);
 }
 
