fixed search placeholder labels

--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -10,7 +10,7 @@
             <%= text_field_tag :query,
               params[:query],
               class: "form-control form-control-lg",
-              placeholder: "Find a bike"
+              placeholder: "Pick a Bike or a City..."
             %>
           </div>
           <%= submit_tag "Search", class: "btn btn-danger ml-2 btn-lg" %>
