--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,6 +21,12 @@ h1 {
   margin: 0 0 1.5rem;
 }
 
+#home-heading {
+  color: white;
+  text-shadow: 3px 4px 3px #000000;
+  font-family: "Raleway", "Helvetica", "sans-serif";
+}
+
 i {
   font-size: 1.3rem;
 }
