--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container">
     <div class="cover">
-      <h1>Discover Portugal's best Beers and Bikes.</h1>
+      <h1 id="home-heading">Discover Portugal's best Beers and Bikes.</h1>
       <div class="row">
         <div class="col-6">
           <div class="search-bike-index" class="">
