--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   // margin: 0;
-   background: url('https://media.giphy.com/media/3oz8xwsGcaZWWB8KyY/giphy.gif')  ;
+   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba( 0, 0, 0.5, 0.7)), url('https://media.giphy.com/media/3oz8xwsGcaZWWB8KyY/giphy.gif')  ;
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
   // background-size: cover;
