--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   background: transparent;
   width: 100%;
   transition: 0.5s background-color ease;
-
+  padding-bottom: 75px;
 }
 
 .navbar-grey {
