--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -61,20 +61,31 @@
   height: 400px;
   margin: 30px;
   display: flex;
-  border: 1px solid black;
+  // border: 1px solid black;
 }
 
 .booking-index-card-info {
-  display: flex;
-  flex-direction: column;
+      margin-right: 100px;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    padding-top: 10px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding-left: 30px;
+    margin-left: 50px;
 }
 
 .booking-index-card-info-actions {
   color: black;
   width: 20%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  // justify-content: flex-end;
+  // align-items: flex-end;
+  justify-content: space-evenly;
+      align-items: flex-start
 
   a {
     font-size: 20px;
@@ -84,5 +95,35 @@
   .fas {
     font-size: 20px;
     color: black;
+    padding-left: 10px
+  }
+  .fas:hover{
+  // background: #d73851;
+  // border: 1px solid #d73851;
+  color: #d73851;
   }
 }
+
+.booking-index-card {
+    width: 55vw;
+    height: 200px;
+    margin: 30px;
+    // display: -webkit-box;
+    // border: dashed;
+}
+
+.booking-index-card-photo img {
+  width: 200px;
+}
+
+#body-container {
+   display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-center-mybookings{
+  padding-top: 125px;
+}
+
