--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,31 +1,34 @@
-<h1 class="text-center">My Bookings</h1>
 
-  <% @bookings.each do |booking| %>
-      <div class="booking-index-card">
-        <div class="booking-index-card-photo">
-            <%= cl_image_tag booking.bike.photo.key %>
-        </div>
-        <div class="booking-index-card-info">
-          <h2><%= booking.bike.brand %></h2>
-           <p> <%= booking.bike.model %></p>
-            <p><%= booking.start_date %></p>
-          <p><%= booking.end_date %></p>
-        </div>
+ <h1 class="text-center-mybookings">My Bookings</h1>
+   <% @bookings.each do |booking| %>
+       <div class="booking-index-card">
+         <div class="booking-index-card-photo">
+             <%= cl_image_tag booking.bike.photo.key %>
+         </div>
+         <div class="booking-index-card-info">
+           <h2> <%= booking.bike.brand %></h2>
+            <p> <strong>Model:</strong> <%= booking.bike.model %></p>
+             <p> <strong>Begin date:</strong> <%= booking.start_date %></p>
+           <p> <strong>End date </strong><%= booking.end_date %></p>
+         </div>
 
-        <div class="booking-index-card-info-actions">
-          <% if policy(booking).update? %>
-            <%= link_to edit_bike_booking_path(booking.bike, booking) do %>
-              <i class="fas fa-pencil-alt"></i>
-            <% end %>
-          <% end %>
-          <% if policy(booking).destroy? %>
-            <%= link_to bike_booking_path(booking.bike, booking), method: :delete, data: { confirm: 'Are you sure?' } do %>
-          <i class="fas fa-trash-alt"></i>
-          <% end %>
-          <% end %>
-        </div>
-      </div>
-  <% end %>
+         <div class="booking-index-card-info-actions">
+           <% if policy(booking).update? %>
+             <%= link_to edit_bike_booking_path(booking.bike, booking) do %>
+               <i class="fas fa-pencil-alt"></i>
+             <% end %>
+           <% end %>
+           <% if policy(booking).destroy? %>
+             <%= link_to bike_booking_path(booking.bike, booking), method: :delete, data: { confirm: 'Are you sure?' } do %>
+           <i class="fas fa-trash-alt"></i>
+           <% end %>
+           <% end %>
+         </div>
+       </div>
+   <% end %>
+
+
+
 
 
 
