--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Sign up</h2>
-
+<div class="container text-center pt-5 spacer-500">
+<h1 class="pt-5">Sign up</h1>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -16,10 +16,10 @@
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
-
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
+    <%= f.button :submit, "Sign up", class: 'btn btn-danger' %>
+    <p class="py-2">or</p>
+    <%= render "devise/shared/links" %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <% end %>
+</div>
