--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h1 id="home-heading">Discover Portugal's best Beers and Bikes.</h1>
       <div class="row">
         <div class="col-6">
-          <div class="search-bike-index" class="">
+          <div class="search-bike-index" >
             <%= form_tag bikes_path, method: :get,class: "form-inline"  do %>
               <div class="input-group search-input">
                 <div class="input-group-prepend">
@@ -24,7 +24,6 @@
     </div>
   </div>
 </div>
-
 <%= render 'shared/body' %>
-<hr>
+<hr class="pb-5">
 <%= render 'shared/map' %>
