--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -116,7 +116,7 @@
   width: 200px;
 }
 
-#body-container {
+.bookings-index {
    display: flex;
     flex-direction: column;
     justify-content: center;
