--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -117,12 +117,18 @@
 }
 
 #body-container {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 }
 
+.bookings-center{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
 .text-center-mybookings{
   padding-top: 125px;
 }
