--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="bookings-center">
  <h1 class="text-center-mybookings">My Bookings</h1>
    <% @bookings.each do |booking| %>
        <div class="booking-index-card">
@@ -26,7 +26,7 @@
          </div>
        </div>
    <% end %>
-
+</div>
 
 
 
